overflow fix

--- a/public/betweenRound/style.css
+++ b/public/betweenRound/style.css
@@ -1,6 +1,6 @@
 body {
     width: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
     position: absolute;
     font-family: 'Kanit', sans-serif;
 }
